Finished first run through of layout

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,2 +1,55 @@
-<h1>Tic Tac Toe Program</h1>
-<p>This is the home page for my Tic Tac Toe program.</p>
+<div class="center hero-unit">
+	<h1>Tic Tac Toe Program</h1>
+  <h2>This is the home page for my Tic Tac Toe program.</h2>
+
+  <p> <button class="btn btn-large btn-primary" type="button">New Game</button></p>
+
+  <table class="table">
+    <tr>
+      <form class="form-inline">  
+        <p>   
+          <strong>Square 1:</strong>
+          <input type="text" class="input-mini">
+          <button type="submit" class="btn btn-mini">Submit</button>  
+          <strong>Square 2:</strong>
+          <input type="text" class="input-mini">
+          <button type="submit" class="btn btn-mini">Submit</button>
+          <strong>Square 3:</strong>
+          <input type="text" class="input-mini">
+          <button type="submit" class="btn btn-mini">Submit</button>  
+        </p>         
+      </form>      
+    </tr>
+    <tr>
+      <form class="form-inline"> 
+        <p>
+          <strong>Square 4:</strong>
+          <input type="text" class="input-mini">
+          <button type="submit" class="btn btn-mini">Submit</button>
+          <strong>Square 5:</strong>
+          <input type="text" class="input-mini">
+          <button type="submit" class="btn btn-mini">Submit</button>
+          <strong>Square 6:</strong>
+          <input type="text" class="input-mini">
+          <button type="submit" class="btn btn-mini">Submit</button>                    
+        </p>
+      </form>
+    </tr>    
+    <tr>
+      <form class="form-inline"> 
+        <p>
+          <strong>Square 7:</strong>
+          <input type="text" class="input-mini">
+          <button type="submit" class="btn btn-mini">Submit</button>
+          <strong>Square 8:</strong>
+          <input type="text" class="input-mini">
+          <button type="submit" class="btn btn-mini">Submit</button>
+          <strong>Square 9:</strong>
+          <input type="text" class="input-mini">
+          <button type="submit" class="btn btn-mini">Submit</button>                  
+        </p>
+      </form>
+    </tr>     
+  </table>
+
+</div>
