first run through Players MVC

--- a/app/views/tictactoe/new.html.erb
+++ b/app/views/tictactoe/new.html.erb
@@ -1,4 +1,20 @@
-<h1>Game Setup</h1>
-<h2>Player Name: </h2>
-<h2>Player Mark: </h2>
-<h2>First to act? </h2>
+<div class="center hero-unit">
+  <h1>Player Setup</h1>
+  </br>
+  <strong>Player 1 name: </strong>
+  <input class="input-small" type="text">
+  <strong>Player 2 name: </strong>
+  <input class="input-small" type="text">
+
+  </br>
+
+  <strong>Player 1 mark: </strong>
+  <input class="input-small" type="text">
+  <strong>Player 2 mark: </strong>
+  <input class="input-small" type="text">
+
+  </br>
+
+    <%= link_to "Play!", game_path, class: "btn btn-large btn-primary" %>
+
+</div>
