--- a/app/views/tictactoe/index.html.erb
+++ b/app/views/tictactoe/index.html.erb
@@ -1,5 +1,7 @@
 <div class="center hero-unit">
-	<h1>Welcome to Tic Tac Toe!</h1>
+	<h1>Welcome to Tic Tac Toe Program!</h1>
   <h2>Instructions: </h2>
-  <p> <button class="btn btn-large btn-primary" type="button">Play!</button></p>
+
+  <%= link_to "Player Setup", new_player_path, class: "btn btn-large btn-primary" %>
+
 </div>
