--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,55 +1,7 @@
 <div class="center hero-unit">
-	<h1>Tic Tac Toe Program</h1>
-  <h2>This is the home page for my Tic Tac Toe program.</h2>
+  <h1>Welcome to Tic Tac Toe Program!</h1>
+  <h2>Instructions: </h2>
 
-  <p> <button class="btn btn-large btn-primary" type="button">New Game</button></p>
-
-  <table class="table">
-    <tr>
-      <form class="form-inline">  
-        <p>   
-          <strong>Square 1:</strong>
-          <input type="text" class="input-mini">
-          <button type="submit" class="btn btn-mini">Submit</button>  
-          <strong>Square 2:</strong>
-          <input type="text" class="input-mini">
-          <button type="submit" class="btn btn-mini">Submit</button>
-          <strong>Square 3:</strong>
-          <input type="text" class="input-mini">
-          <button type="submit" class="btn btn-mini">Submit</button>  
-        </p>         
-      </form>      
-    </tr>
-    <tr>
-      <form class="form-inline"> 
-        <p>
-          <strong>Square 4:</strong>
-          <input type="text" class="input-mini">
-          <button type="submit" class="btn btn-mini">Submit</button>
-          <strong>Square 5:</strong>
-          <input type="text" class="input-mini">
-          <button type="submit" class="btn btn-mini">Submit</button>
-          <strong>Square 6:</strong>
-          <input type="text" class="input-mini">
-          <button type="submit" class="btn btn-mini">Submit</button>                    
-        </p>
-      </form>
-    </tr>    
-    <tr>
-      <form class="form-inline"> 
-        <p>
-          <strong>Square 7:</strong>
-          <input type="text" class="input-mini">
-          <button type="submit" class="btn btn-mini">Submit</button>
-          <strong>Square 8:</strong>
-          <input type="text" class="input-mini">
-          <button type="submit" class="btn btn-mini">Submit</button>
-          <strong>Square 9:</strong>
-          <input type="text" class="input-mini">
-          <button type="submit" class="btn btn-mini">Submit</button>                  
-        </p>
-      </form>
-    </tr>     
-  </table>
+  <%= link_to "Player Setup", new_player_path, class: "btn btn-large btn-primary" %>
 
 </div>
