--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,7 +1,7 @@
 <div class="center hero-unit">
-  <h1>Welcome to Tic Tac Toe Program!</h1>
-  <h2>Instructions: </h2>
+  <h1>Welcome!</h1>
+  <h2>What would you like to do?</h2>
 
-  <%= link_to "Player Setup", new_player_path, class: "btn btn-large btn-primary" %>
+  <%= link_to "Play Tic Tac Toe!", new_tictacto_path, class: "btn btn-large btn-primary" %>
 
 </div>
