--- a/app/views/players/index.html.erb
+++ b/app/views/players/index.html.erb
@@ -1,9 +1,12 @@
-<h1>All users</h1>
+<div class="center hero-unit">
 
-<ul>
+	<h1>All users</h1>
+
   <% @players.each do |player| %>
     <li>
-		  <%= player.name %>, <%= player.mark %>
+	  <%= player.name %>, <%= player.id %>, <%= player.mark %>, <%= player.moves %>
     </li>
   <% end %>
-</ul>
+  </br>
+	<%= link_to "Edit player 1 ", edit_player_path(1), class: "btn btn-large btn-primary" %>
+</div>
