basic game board interaction, game status, records players moves

--- a/app/views/players/_new.html.erb
+++ b/app/views/players/_new.html.erb
@@ -6,5 +6,11 @@
   <%= f.label :mark %>  
   <%= f.text_field :mark %>
 
+  <%= f.label :first_to_act %>  
+  <%= f.text_field :first_to_act %>  
+
   <%= f.submit "Create Player", class: "btn btn-large btn-primary" %>
 <% end %>
+
+
+
