--- a/app/views/tictactoes/edit.html.erb
+++ b/app/views/tictactoes/edit.html.erb
@@ -5,24 +5,12 @@
   <div class="row">
     <div class="span4 offset1">
       </br>
-      <strong>Turn:</strong>
-      </br>
-      <strong>Player 1: name, moves</strong>
-      </br>
-      <strong>Player 2: name, moves</strong>
+      <%= render 'dashboard' %>
     </div>
     <div class="span4 offset4">
     	</br>
-      <strong>ID, Square values:</strong>
-      <%= @tictactoe.id %>, <%= @tictactoe.squares %>
+      <%= render 'gameboard' %>
       </br>
-      </br>
-      <%= form_for(@tictactoe) do |f| %>         
-        <%= f.text_field :squares %>
-        <%= f.submit "Submit button", class: "btn btn-large btn-primary" %>
-      <% end %>
-      </br>
-      <%= link_to "All games", tictactoes_path, class: "btn btn-large btn-primary" %>
     </div>
   </div>
 
