updated game board interface -- graphical UI using jquery

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -26,6 +26,18 @@ textarea {
   margin-bottom: 10px;
 }
 
+
+.table-bordered {
+  
+}
+
+.table a {
+  display: block;
+  text-decoration: none;
+}
+
+
+
 /* typography */
 
 h1, h2, h3, h4, h5, h6 {
