--- a/app/views/tictactoes/_dashboard.html.erb
+++ b/app/views/tictactoes/_dashboard.html.erb
@@ -1,21 +1,28 @@
-<% players_info = p_info(@tictactoe) %>
 <% players_moves = p_moves(@tictactoe) %>
 <% open_squares = @tictactoe.open_squares(players_moves[0],players_moves[1]) %>
 
+</br>
+<h4>Player 1:</h4>
+<strong>Name: </strong> <%= @tictactoe.players[0].name %> </br>
+<strong>Mark: </strong> <%= @tictactoe.players[0].mark %> </br>
+<strong>Moves:</strong> <%= players_moves[0] %> </br>
 
-</br>
-<strong>Player 1:</strong> <%= players_info[0] %> 
-<strong>Moves:</strong> <%= players_moves[0] %>
-</br>
-<strong>Player 2:</strong> <%= players_info[1] %>
-<strong>Moves:</strong> <%= players_moves[1] %>
+<h4>Player 2:</h4>
+<strong>Name: </strong> <%= @tictactoe.players[1].name %> </br>
+<strong>Mark: </strong> <%= @tictactoe.players[1].mark %> </br>
+<strong>Moves:</strong> <%= players_moves[1] %> </br>
+
 </br>
 <strong>Open squares:</strong>  <%= open_squares %>
 </br>
-<strong>Turn:</strong> <%= turn(@tictactoe.players, open_squares) %>
+<strong>Turn:</strong> <div class="player_turn"><%= turn(@tictactoe.players, open_squares) %></div>
 </br>
 <strong>Player 1 winner:</strong> <%= @tictactoe.winner?(players_moves[0]) %>
 </br>
 <strong>Player 2 winner:</strong> <%= @tictactoe.winner?(players_moves[1]) %>
 </br>
 <strong>Draw:</strong> <%= @tictactoe.draw?(players_moves[0],players_moves[1]) %>
+
+</br>
+</br>
+<button>Reset</button>
