--- a/app/views/tictactoes/_gameboard.html.erb
+++ b/app/views/tictactoes/_gameboard.html.erb
@@ -1,29 +1,70 @@
-<strong>Tictactoe id:</strong>
-<%= @tictactoe.id %>
-</br>
-<strong>Total Squares:</strong>
-<%= @tictactoe.squares.count %>
+
 </br>
 </br>
 
-
-
-
-<%= @tictactoe.squares[0].value %> , <%= @tictactoe.squares[1].value %> , <%= @tictactoe.squares[2].value %>
-</br>
-<%= @tictactoe.squares[3].value %> , <%= @tictactoe.squares[4].value %> , <%= @tictactoe.squares[5].value %>
-</br>
-<%= @tictactoe.squares[6].value %> , <%= @tictactoe.squares[7].value %> , <%= @tictactoe.squares[8].value %>
+<table class="table table-bordered">
+  <tr>  
+    <td>
+      <div class="center square0">
+        <%= link_to(image_tag(return_image(@tictactoe, 0), :size => "100x100"), "#") %>
+      </div>
+    </td>
+    <td>
+      <div class="center square1">
+        <%= link_to(image_tag(return_image(@tictactoe, 1), :size => "100x100"), "#") %>
+      </div>
+    </td>
+    <td>
+      <div class="center square2">
+        <%= link_to(image_tag(return_image(@tictactoe, 2), :size => "100x100"), "#") %>
+      </div>
+    </td>
+  </tr>
+  <tr>  
+    <td>
+      <div class="center square3">
+        <%= link_to(image_tag(return_image(@tictactoe, 3), :size => "100x100"), "#") %>
+      </div>
+    </td>
+    <td>
+      <div class="center square4">
+        <%= link_to(image_tag(return_image(@tictactoe, 4), :size => "100x100"), "#") %>
+      </div>
+    </td>
+    <td>
+      <div class="center square5">
+        <%= link_to(image_tag(return_image(@tictactoe, 5), :size => "100x100"), "#") %>
+      </div>
+    </td>
+  </tr>
+  <tr>  
+    <td>
+      <div class="center square6">
+        <%= link_to(image_tag(return_image(@tictactoe, 6), :size => "100x100"), "#") %>
+      </div>
+    </td>
+    <td>
+      <div class="center square7">
+        <%= link_to(image_tag(return_image(@tictactoe, 7), :size => "100x100"), "#") %>
+      </div>
+    </td>
+    <td>
+      <div class="center square8">
+        <%= link_to(image_tag(return_image(@tictactoe, 8), :size => "100x100"), "#") %>
+      </div>
+    </td>
+  </tr>    
+</table>
 
 
 <%= form_for(@tictactoe) do |f| %> 
-  <% c = 0 %> 
   <%= f.fields_for :squares, @square do |e| %>
-    </br>
-    Square: <%= c %>
-    <%= e.text_field :value %>
-    <% c += 1 %>
-    <%= simple_format("") if c == 3 || c == 6 %>
+    <%= e.hidden_field :value %>
   <% end %>
-    <%= f.submit "Submit button", class: "btn btn-large btn-primary" %>
 <% end %>
+
+
+
+
+
+
