--- a/app/views/squares/new.html.erb
+++ b/app/views/squares/new.html.erb
@@ -1,12 +1,11 @@
 <div class="center hero-unit">
 	<h1>Squares New</h1>
 
-  <%= form_for([@tictactoe, @square]) do |f| %>        
-          
-    <%= f.label :num %>  
-    <%= f.text_field :num %>
-
-    <%= f.submit "Create Square", class: "btn btn-large btn-primary" %>
+<%= form_for @tictactoe do |f| %>
+  <%= f.fields_for :squares do |builder| %>
+    <%= builder.hidden_field :num, :rows => 9 %>
   <% end %>
+  <p><%= f.submit "Create Squares", class: "btn btn-large btn-primary" %></p>
+<% end %>        
 
 </div>
