--- a/app/views/tictactoes/new.html.erb
+++ b/app/views/tictactoes/new.html.erb
@@ -1,10 +1,21 @@
 <div class="center hero-unit">
-	<h1>Welcome to Tic Tac Toe!</h1>
+  <h1>Welcome to Tic Tac Toe!</h1>
 
 
-	<%= form_for(@tictactoe) do |f| %>        
-	  <%= f.submit "Start Game!", class: "btn btn-large btn-primary" %>
-	<% end %>
+  <div class="row">
+    <div class="span4 offset1">
+      </br>
+      <%= form_for(@tictactoe) do |f| %>        
+	    <%= f.submit "Start Game!", class: "btn btn-large btn-primary" %>
+	    <% end %>
 
+      <%= link_to "Try This", {:action => :create}, :method => :post %>
+    </div>
+    <div class="span4 offset4">
+    	</br>
+      <%= render 'new' %>
+      </br>
+    </div>
+  </div>
 
 </div>
