--- a/app/views/players/new.html.erb
+++ b/app/views/players/new.html.erb
@@ -1,12 +1,14 @@
-<div class="center hero-unit">
-  <h1>Player Setup</h1>
-  </br>
-
+<div class="center">  
   <div class="row">
-    <div class="span3 offset5">
-        <%= render 'new' %>
+    <div class="span5 offset1">
+      <h1>Tic Tac Toe</h1>
+      <h2>Player Setup</h2>  
+      <%= render 'new' %>
     </div>
+    <div class="span4 offset1">
+      <%= render 'emptyboard' %>
+    </div>
+    <div class="span1">
+    </div>    
   </div>
-
-
 </div>
