--- a/app/views/tictactoes/_dashboard.html.erb
+++ b/app/views/tictactoes/_dashboard.html.erb
@@ -1,21 +1,50 @@
-
 <% open_squares = @tictactoe.open_squares(p1_moves(@tictactoe),p2_moves(@tictactoe)) %>
-
+<h1>Tic Tac Toe</h1>
+<div class="player-turn-marker"><%= turn(@tictactoe.players, open_squares) %></div>
+<div class="player-1-turn player-display"><%= @tictactoe.players[0].name %>, select your square.</div>
+<div class="player-2-turn player-display"><%= @tictactoe.players[1].name %>, select your square.</div>
 </br>
-<h4>Player 1:</h4>
-<strong>Name: </strong> <%= @tictactoe.players[0].name %> </br>
-<strong>Mark: </strong> <%= @tictactoe.players[0].mark %> </br>
-<strong>Moves:</strong> <%= p1_moves(@tictactoe) %> </br>
+<table class="table table-hover">
+  <thead>
+    <tr>
+      <th>
+        <div class="center">Name</div>
+      </th>
+      <th>
+        <div class="center">Mark</div>
+      </th>
+    </tr>
+  </thead>
+  <tbody>
+  	<tr>
+      <td>
+        <div class="center">
+          <%= @tictactoe.players[0].name %>
+        </div>
+      </td>
+      <td>     
+        <div class="center">
+          <%= image_tag "x.jpg", :size => "25x25" %>
+        </div>
+      </td>
+    </tr>
+    <tr>
+      <td>
+        <div class="center">
+          <%= @tictactoe.players[1].name %>
+        </div>
+      </td>
+      <td>
+        <div class="center">
+          <%= image_tag "o.jpg", :size => "25x25" %>
+        </div>
+      </td>
+    </tr>
+  </tbody>
+</table>
 
-<h4>Player 2:</h4>
-<strong>Name: </strong> <%= @tictactoe.players[1].name %> </br>
-<strong>Mark: </strong> <%= @tictactoe.players[1].mark %> </br>
-<strong>Moves:</strong> <%= p2_moves(@tictactoe) %> </br>
 
-</br>
-<strong>Open squares:</strong>  <%= open_squares %>
-</br>
-<strong>Turn:</strong> <div class="player_turn"><%= turn(@tictactoe.players, open_squares) %></div>
+
 
 
 
