--- a/app/views/tictactoes/edit.html.erb
+++ b/app/views/tictactoes/edit.html.erb
@@ -1,17 +1,12 @@
-<div class="center hero-unit">
-  <h1>Edit Page</h1>
-
-
+<div class="center">  
   <div class="row">
-    <div class="span4 offset1">
-      </br>
+    <div class="span5 offset1">
       <%= render 'dashboard' %>
     </div>
-    <div class="span4 offset4">
-    	</br>
+    <div class="span4 offset1">
       <%= render 'gameboard' %>
-      </br>
     </div>
+    <div class="span1">
+    </div>    
   </div>
-
 </div>
