cpu algorithm implemented

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -48,6 +48,12 @@ textarea {
   line-height: .1em;
 }
 
+.cpu-move-marker {
+  color: white;
+  font-size: .1em;
+  line-height: .1em;
+}
+
 .player-display {
   font-size: 1.7em;
   letter-spacing: -1px;
