--- a/app/views/tictactoes/_show.html.erb
+++ b/app/views/tictactoes/_show.html.erb
@@ -1,7 +1,7 @@
 <h1>Tic Tac Toe</h1>
 <div class="player-winner-marker"><%= p_winner(@tictactoe) %></div>
 <div class="player-1-winner player-display"> Congratulations <strong><%= @tictactoe.players[0].name %></strong>, you win!</div>
-<div class="player-2-winner player-display"> Contratulations <strong><%= @tictactoe.players[1].name %></strong>, you win!</div>
+<div class="player-2-winner player-display"> Sorry, <strong><%= @tictactoe.players[1].name %></strong> wins.</div>
 <div class="player-no-winner player-display"> Game ends in draw.</div>
 </br>
 </br>
