--- a/app/views/players/_new.html.erb
+++ b/app/views/players/_new.html.erb
@@ -1,15 +1,25 @@
 <%= form_for @tictactoe do |f| %>
   <%= f.fields_for :players do |builder| %>
     <div class="row">      
-      <div class="span2">
-        <%= builder.label :name, "Enter name:" , :class => 'player-name' %>
-      </div>
-      <div class="span2">
-        <%= builder.text_field :name, :class => 'player-input' %>
+      <div class="span5">
+        </br>
+        <%= builder.text_field :name, :placeholder => "Type in name...", :class => 'player-input' %>
+        <%= builder.hidden_field :win, :value => 0 %>
+        <%= builder.hidden_field :lose, :value => 0 %>
+        <%= builder.hidden_field :draw, :value => 0 %>
       </div>
     </div>
+    <div class="row">      
+      <div class="span2 offset1">
+
+        <%= builder.label :first_to_act, "First player to move: ", :class => 'check-box-label' %>       
+      </div>
+      <div class="span1">
+
+        <%= builder.check_box :first_to_act, {:checked => true, :class => 'check-box-label'}, "true", "false" %>       
+      </div>
+    </div>    
   <% end %>
   </br>
   <p><%= f.submit "Create Player", class: "btn btn-large btn-primary" %></p>
 <% end %>        
-
