--- a/app/views/tictactoes/new.html.erb
+++ b/app/views/tictactoes/new.html.erb
@@ -10,7 +10,7 @@
       <%= button_to "Start Game!", {:action => :create}, :method => :post, :class => 'btn btn-large btn-primary' %>
     </div>
     <div class="span4 offset1">
-      <%= render 'emptyboard' %>
+      <%= render 'shared/emptyboard' %>
     </div>
     <div class="span1">
     </div>    
