--- a/app/views/tictactoes/_dashboard.html.erb
+++ b/app/views/tictactoes/_dashboard.html.erb
@@ -1,6 +1,5 @@
-<% open_squares = @tictactoe.open_squares(p1_moves(@tictactoe),p2_moves(@tictactoe)) %>
 <h1>Tic Tac Toe</h1>
-<div class="player-turn-marker"><%= turn(@tictactoe, open_squares) %></div>
+<div class="player-turn-marker"><%= turn(@tictactoe) %></div>
 <div class="player-1-turn player-display"><%= @tictactoe.players[0].name %>, select a square.</div>
 <div class="player-2-turn player-display"><%= @tictactoe.players[1].name %>, select a square.</div>
 </br>
