--- a/app/views/tictactoes/show.html.erb
+++ b/app/views/tictactoes/show.html.erb
@@ -1,7 +1,21 @@
 <div class="center">  
   <div class="row">
     <div class="span5 offset1">
-      <%= render 'show' %>
+      <h1>Tic Tac Toe</h1>
+      <div class="player-winner-marker"><%= p_winner(@tictactoe) %></div>
+      <div class="player-1-winner player-display"> Congratulations <strong><%= @tictactoe.players[0].name %></strong>, you win!</div>
+      <div class="player-2-winner player-display"> Sorry, <strong><%= @tictactoe.players[1].name %></strong> wins.</div>
+      <div class="player-no-winner player-display"> Game ends in draw.</div>
+      </br>
+      </br>
+      <div class="row">
+        <div class="reset span3">
+          <button type="button" class="btn btn-large btn-success">Try again!</button>
+        </div>
+        <div class="span1">
+          <%= button_to "Quit.", root_path, :class => 'btn btn-large btn-danger' %>
+        </div>  
+      </div>
     </div>
     <div class="span4 offset1">
       <%= render 'gameboard' %>
