--- a/app/views/players/new.html.erb
+++ b/app/views/players/new.html.erb
@@ -6,7 +6,7 @@
       <%= render 'new' %>
     </div>
     <div class="span4 offset1">
-      <%= render 'emptyboard' %>
+      <%= render 'shared/emptyboard' %>
     </div>
     <div class="span1">
     </div>    
