streamlined jQuery, moved a section to coffeescript

--- a/app/views/tictactoes/_dashboard.html.erb
+++ b/app/views/tictactoes/_dashboard.html.erb
@@ -1,7 +1,7 @@
 <h1>Tic Tac Toe</h1>
 <div class="player-turn-marker"><%= turn(@tictactoe) %></div>
 <div class="player-1-turn player-display"><%= @tictactoe.players[0].name %>, select a square.</div>
-<div class="player-2-turn player-display"><%= @tictactoe.players[1].name %>, select a square.</div>
+<div class="player-2-turn player-display"><%= @tictactoe.players[1].name %> is thinking...</div>
 </br>
 </br>
 <table class="table table-hover">
