--- a/app/views/players/_new.html.erb
+++ b/app/views/players/_new.html.erb
@@ -7,16 +7,9 @@
         <%= builder.hidden_field :win, :value => 0 %>
         <%= builder.hidden_field :lose, :value => 0 %>
         <%= builder.hidden_field :draw, :value => 0 %>
+        <%= builder.hidden_field :first_to_act, :value => "true" %>
       </div>
     </div>
-    <div class="row">      
-      <div class="span2 offset1">
-        <%= builder.label :first_to_act, "First player to move: ", :class => 'check-box-label' %>       
-      </div>
-      <div class="span1">
-        <%= builder.check_box :first_to_act, {:checked => true, :class => 'check-box-label'}, "true", "false" %>       
-      </div>
-    </div>    
   <% end %>
   </br>
   <p><%= f.submit "Create Player", class: "btn btn-large btn-primary" %></p>
