--- a/app/views/tictactoes/show.html.erb
+++ b/app/views/tictactoes/show.html.erb
@@ -13,7 +13,7 @@
           <button type="button" class="btn btn-large btn-success">Try again!</button>
         </div>
         <div class="span1">
-          <%= button_to "Quit.", root_path, :class => 'btn btn-large btn-danger' %>
+          <%= button_to "Quit.", root_path, :class => 'btn btn-large btn-primary' %>
         </div>  
       </div>
     </div>
