--- a/app/views/tictactoes/show.html.erb
+++ b/app/views/tictactoes/show.html.erb
@@ -1,7 +1,8 @@
+<% provide(:title, 'Results') %>
 <div class="center">  
   <div class="row">
     <div class="span5 offset1">
-      <h1>Tic Tac Toe</h1>
+      <h1>Tic Tac Toe Results</h1>
       <div class="player-winner-marker"><%= p_winner(@tictactoe) %></div>
       <div class="player-1-winner player-display"> Congratulations <strong><%= @tictactoe.players[0].name %></strong>, you win!</div>
       <div class="player-2-winner player-display"> Sorry, <strong><%= @tictactoe.players[1].name %></strong> wins.</div>
